--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -16,7 +16,7 @@
       <p>Beach. Rainforest. Volcano. Tree House. Sloths.</p>
       <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Get Data!</a></p>
     </div>
-    <img src="{{ mars.featured_image_url  }}" alt="Sloth">
+    <img src="{{ mars.featured_img  }}" alt="Sloth">
     <h2>The typical weather in Costa Rica is:</h2>
     <h3>Max Temp: {{ mars.max_temp }}</h3>
     <h3>Min Temp: {{ mars.min_temp }}</h3>
