--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -6,23 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Costa Rica Weather</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel ="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 </head>
 
 <body>
-  <div class="container-fluid">
-    <div class="jumbotron text-center">
-      <h1>Visit the...</h1>
-      <p>Beach. Rainforest. Volcano. Tree House. Sloths.</p>
+  <!-- <div class="container"> -->
+    <div class="row">
+      <div class="col-md-12 jumbotron text-center">
+      <h1>Mission to Mars</h1>
       <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Get Data!</a></p>
     </div>
+  </div>
+    <div class="row">
+      <div class="col-sm-3">
     <img src="{{ mars.featured_img  }}" alt="featured image">
+      </div>
+    </div>
     <!-- <h2>The typical weather in Costa Rica is:</h2> -->
-    <div>
+    <!-- <div>
       {% for i in mars.hemispheres %}
         {% for k,v in i.items() %}
-      <!-- <h1>Key: {{key}}</h1> -->
-        {% if k == 'title' %}
+      <--<h1>Key: {{key}}</h1> -->
+        <!-- {% if k == 'title' %}
          <h2>{{ v }}</h2>
         {% endif%}
         {%if k == 'img_url'%}
@@ -30,10 +36,46 @@
         {% endif %}
     {% endfor %}
     {% endfor %}
-    </div> 
+    </div>   -->
+ 
+    <div class="row">
+ 
+      <div class="col-3">
+
+        {% for i in mars.hemispheres %}
+        {% for k,v in i.items() %}
+        <div class="card" style="width: 18rem;">
+
+            {%if k == 'img_url'%}
+          <img class="card-img-top" src="{{v}}" alt="Card image cap">
+            {% endif %}
+          <div class="card-body">
+            {% if k == 'title' %}
+            <h5 class="card-title">{{v}}</h5>
+            {% endif %}
+
+          </div>
+          {% endfor %}
+          {% endfor %}
+        </div>
+
+
+
+
+
+      <!-- <div class="col-sm-3">
+        <div class="card">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div> -->
+      </div>
+    </div>
 
   </div>
-  </div>
+  <!-- </div> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
